@@ -161,6 +161,7 @@ multiple objects: 	fixed missing lines in help files and references
         Accidentals are correctly dealt with when importing multi-voice parts
         Fixed crash when importing empty lyrics with empty "text" tag
         Time signature can be inferred if not given
+        Breve, long and maxima figures are correctly imported
     XML import and export: three-quarters-sharp and -flat accidentals have correct name now (was "three-quarter")
         complex time signatures are correctly handled
     XML export: figures longer than a whole note are correctly exported
